--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -8,4 +8,5 @@ async-trait = "0.1.89"
 chrono = { version = "0.4.43", features = ["serde"] }
 futures = "0.3.31"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 thiserror = "2.0.18"
