--- a/crates/market/Cargo.toml
+++ b/crates/market/Cargo.toml
@@ -9,7 +9,11 @@ async-trait = "0.1.89"
 chrono = "0.4.43"
 dashmap = "6.1.0"
 futures = "0.3.31"
+okane-cache = { version = "0.1.0", path = "../cache" }
 okane-core = { version = "0.1.0", path = "../core" }
+okane-store = { version = "0.1.0", path = "../store" }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 tokio = { version = "1.49.0", features = ["sync", "rt", "time", "macros"] }
 tracing = "0.1.44"
 
