特性(engine): 重构策略引擎为 JsEngine 优先的双运行时架构
- 移除 Extism 依赖，引入 rquickjs (QuickJS) 和 wasmtime 双引擎
- JsEngine: 基于 rquickjs 在沙盒中执行 JS 策略，注入 host.log/now/fetchHistory
- WasmEngine: 基于 wasmtime Linker API 执行编译型 WASM 策略模块
- 抽取 StrategyRuntime trait 和 EngineBase 共享信号分发基础设施
- 重写 examples 移除 extism-pdk，strategy-dummy/strategy-host-test 改为纯裸 WASM 接口
- 新增 js-strategy-demo 纯 JS 策略示例模板
- 补齐全部端到端集成测试 (7/7 通过)
- 更新 docs/architecture.md 架构说明

--- a/examples/strategy-host-test/Cargo.toml
+++ b/examples/strategy-host-test/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "strategy-dummy"
+name = "strategy-host-test"
 version = "0.1.0"
 edition = "2024"
 
@@ -7,6 +7,6 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-chrono = { version = "0.4.43", features = ["serde"] }
+chrono = { version = "0.4.43", default-features = false, features = ["serde", "alloc"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
