--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.89"
 chrono = "0.4.43"
-extism = "1.13.0"
 futures = "0.3.31"
 okane-core = { version = "0.1.0", path = "../core" }
-serde = "1.0.228"
+rquickjs = { version = "0.11.0", features = ["futures", "bindgen"] }
 serde_json = "1.0.149"
 tokio = { version = "1.49.0", features = ["sync", "rt", "time", "macros"] }
 tracing = "0.1.44"
 uuid = { version = "1.20.0", features = ["v4"] }
+wasmtime = { version = "41.0.3", features = ["async"] }
 
 [dev-dependencies]
 async-stream = "0.3.6"
