特性(manager): 恢复 StrategyManager 调度层及相关依赖
- 恢复 `crates/manager` 应用服务层抽象
- 重构 `StrategyManager` 的配置、启动与停止逻辑
- 恢复 `crates/core/src/strategy` 核心领域模型（Entity与Port）
- 更新 `app` 的 DI 容器注册逻辑，解耦引擎实例化
- 更新架构文档 `architecture.md`，明确 `manager` 的职责定位

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+okane-core = { version = "0.1.0", path = "../core" }
+okane-engine = { version = "0.1.0", path = "../engine" }
+okane-feed = { version = "0.1.0", path = "../feed" }
+okane-manager = { version = "0.1.0", path = "../manager" }
+okane-market = { version = "0.1.0", path = "../market" }
+okane-store = { version = "0.1.0", path = "../store" }
+tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
+tracing = "0.1.43"
+tracing-subscriber = "0.3.19"
