特性(engine): 实现策略沙盒引擎与 OMS 桥接并注入 TradePort 依赖
- 在 StrategyInstance 中添加绑定交易系统的 AccountId 属性及数据库持久化扩展
- 引入 EngineBuildParams 重构 EngineBuilder 实现，修复所有 clippy::too_many_arguments 告警
- 通过 App 入口端到端注入基于内存的 TradeService 供策略沙盒层调用
- 在 QuickJS 引擎注册并实现 host.buy 和 host.sell 全局功能函数
- 在 Wasmtime 的沙盒 Linker API 暴露原生 host_buy 和 host_sell
- 新增 MockTradePort，通过各项单元及集成测试

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -10,6 +10,7 @@ okane-feed = { version = "0.1.0", path = "../feed" }
 okane-manager = { version = "0.1.0", path = "../manager" }
 okane-market = { version = "0.1.0", path = "../market" }
 okane-store = { version = "0.1.0", path = "../store" }
+okane-trade = { version = "0.1.0", path = "../trade" }
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
 tracing = "0.1.43"
 tracing-subscriber = "0.3.19"
