--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -9,6 +9,7 @@ chrono = "0.4.43"
 futures = "0.3.31"
 okane-core = { version = "0.1.0", path = "../core" }
 rquickjs = { version = "0.11.0", features = ["futures", "bindgen"] }
+rust_decimal = "1.40.0"
 serde_json = "1.0.149"
 tokio = { version = "1.49.0", features = ["sync", "rt", "time", "macros"] }
 tracing = "0.1.44"
