重构(core/trade/engine): 完善回测基础设施与生产级代码级整改
- 新增 `BacktestDriver` 与 `FakeClock`，拉通时间沙箱与本地撮合引擎实现端到端回测
- 修复 `unwrap`、`expect` 滥用及 Mutex 锁中毒隐患，提升系统健壮性
- 引入 `AccountPort` 与 `MatcherPort` 接口，解耦 `TradeService` 的具体环境依赖
- 抽离清算核心 `process_trade`，消除硬编码及重复业务逻辑
- 修复并补全 `test_host_functions_from_js` 及高并发交易下单等集成测试用例

(由 Gemini 3.1 Pro 协助完成)

--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -18,3 +18,4 @@ wasmtime = { version = "41.0.3", features = ["async"] }
 
 [dev-dependencies]
 async-stream = "0.3.6"
+okane-trade = { path = "../trade" }
