特性(store/app): 引入强一致 SQLite 分库架构与 Tracing 结构化日志
- 新增 SqliteAccountStore 实现高频交易本地事务拆分
- system.db 和 strategy.db 激活 WAL 模式与强制连接序列化
- 核心模块集成 tracing 和 tracing-subscriber 滚动日志落盘
- 扩充 BrokerPort 物理券商网关抽象协议

由 Gemini 3.1 Pro 完成

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -13,4 +13,5 @@ okane-store = { version = "0.1.0", path = "../store" }
 okane-trade = { version = "0.1.0", path = "../trade" }
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
 tracing = "0.1.43"
-tracing-subscriber = "0.3.19"
+tracing-appender = "0.2.4"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
