--- a/crates/store/Cargo.toml
+++ b/crates/store/Cargo.toml
@@ -8,9 +8,12 @@ async-trait = "0.1.89"
 chrono = { version = "0.4.43", features = ["serde"] }
 dashmap = "6.1.0"
 okane-core = { version = "0.1.0", path = "../core" }
+rust_decimal = "1.40.0"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
 thiserror = "2.0.18"
+tracing = "0.1.44"
 
 [dev-dependencies]
+rust_decimal_macros = "1.40.0"
 tempfile = "3.24.0"
 tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
