--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -11,3 +11,5 @@ rust_decimal = { version = "1.40.0", features = ["serde"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 thiserror = "2.0.18"
+tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
