--- a/crates/feed/Cargo.toml
+++ b/crates/feed/Cargo.toml
@@ -13,3 +13,4 @@ serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
 tokio-stream = "0.1.18"
+tracing = "0.1.44"
