特性(api/store): 引入全局配置并搭建 API 模块基础骨架
- 在 okane-core 新增 AppConfig，接入 config 多环境变量动态加载
- 新建 okane-api crate 搭建行情、交易、策略等 RESTful 路由与 Auth 中间件
- 重构数据传输层，清理 Java 风格的 Dto 并统一替换为 Rust 风格 Response/Request 机制
- 移除 store 硬编码的 data 物理路径降级机制，并向底层注入 tempfile 测试沙盒
- 修复代码以实现 0 编译器 Clippy 警告

由 Gemini 3.1 Pro 完成

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+config = "0.15.19"
+okane-api = { version = "0.1.0", path = "../api" }
 okane-core = { version = "0.1.0", path = "../core" }
 okane-engine = { version = "0.1.0", path = "../engine" }
 okane-feed = { version = "0.1.0", path = "../feed" }
