--- a/crates/feed/Cargo.toml
+++ b/crates/feed/Cargo.toml
@@ -8,7 +8,7 @@ async-trait = "0.1.89"
 chrono = { version = "0.4.43", features = ["serde"] }
 futures = "0.3.31"
 okane-core = { version = "0.1.0", path = "../core" }
-reqwest = { version = "0.13.1", features = ["json", "query", "rustls-native-certs"] }
+reqwest = { version = "0.13.2", features = ["default", "json", "query"] }
 serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
