--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -44,6 +44,7 @@ rust_decimal = { version = "1", features = ["serde-with-str"] }
 thiserror = "2"
 bcrypt = "0.18.0"
 chrono = "0.4.44"
+uuid = { version = "1.21.0", features = ["v4"] }
 
 [dev-dependencies]
 okane-engine = { path = "../engine" }
