修复(core/store/trade): 增强架构健壮性与解耦核心依赖
- 严格化配置解析管道并实装 AppConfig 快速失败机制
- 移除 FakeClock 的 RwLock 中毒吞没并统一各类库模块初始化方法返回 Result
- 清除 API 层硬编码 JWT，改用基于 AppState 动态注入的鉴权机制
- 引入 PendingOrderPort 与 MemoryPendingOrderStore 以抽离 TradeService 内部并发存储
- 修复所有由隐式环境设定及缺失特定依赖引发的单元与集成测试崩溃问题
由 Gemini 3.1 Pro 完成

--- a/crates/app/Cargo.toml
+++ b/crates/app/Cargo.toml
@@ -13,6 +13,7 @@ okane-manager = { version = "0.1.0", path = "../manager" }
 okane-market = { version = "0.1.0", path = "../market" }
 okane-store = { version = "0.1.0", path = "../store" }
 okane-trade = { version = "0.1.0", path = "../trade" }
+rust_decimal = "1.40.0"
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
 tracing = "0.1.43"
 tracing-appender = "0.2.4"
