--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2024"
 async-trait = "0.1.89"
 chrono = "0.4.43"
 futures = "0.3.31"
+okane-cache = { path = "../cache" }
 okane-core = { version = "0.1.0", path = "../core" }
+okane-store = { path = "../store" }
 rquickjs = { version = "0.11.0", features = ["futures", "bindgen"] }
 rust_decimal = "1.40.0"
 serde_json = "1.0.149"
