--- a/crates/trade/Cargo.toml
+++ b/crates/trade/Cargo.toml
@@ -16,3 +16,4 @@ tracing = "0.1.44"
 [dev-dependencies]
 rust_decimal_macros = "1.40.0"
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
+okane-store = { version = "0.1.0", path = "../store" }
